// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a JavaScript directive 1`] = `
"export const schema = gql\`
  directive @requireAdmin on FIELD_DEFINITION
\`

export const requireAdmin = ({ context, getFieldValue }) => {
  // Implement your directive here. This will be executed \\"onExecute\\"
  // More information on graphql lifecycle here: https://www.envelop.dev/docs/plugins/lifecycle

  // If you want to implement a validation: throw an error if criteria not met to stop execution
  // CurrentUser is only available when auth is setup.
  console.log(context.currentUser)

  // If you want to implement a transform: you can modify the value and return it
  const fieldValue = getFieldValue()
  console.log(fieldValue)

  // You can also modify your directive to take arguments
  // and use the getDirectiveArgument function from @redwoodjs/graphql-server
  // See documentation here: https://redwoodjs.com/docs/directives
}
"
`;

exports[`creates a TypeScript directive 1`] = `
"import type { RedwoodDirective } from '@redwoodjs/graphql-server'

export const schema = gql\`
  directive @bazingaFooBar on FIELD_DEFINITION
\`

export const bazingaFooBar: RedwoodDirective = ({ context, getFieldValue }) => {
  // Implement your directive here. This will be executed \\"onExecute\\"
  // More information on graphql lifecycle here: https://www.envelop.dev/docs/plugins/lifecycle

  // If you want to implement a validation: throw an error if criteria not met to stop execution
  // CurrentUser is only available when auth is setup.
  console.log(context.currentUser)

  // If you want to implement a transform: you can modify the value and return it
  const fieldValue = getFieldValue()
  console.log(fieldValue)

  // You can also modify your directive to take arguments
  // and use the getDirectiveArgument function from @redwoodjs/graphql-server
  // See documentation here: https://redwoodjs.com/docs/directives
}
"
`;
